--- a/src/components/ProfileDetails/ProfileDetails.module.css
+++ b/src/components/ProfileDetails/ProfileDetails.module.css
@@ -5,9 +5,9 @@
     list-style-type:none;
 }
 .title {
-    position: relative;
-    bottom:5.8rem;
-    display:flex;
+    position: absolute;
+    top:0;
+    
 }
 .courses li {
     list-style-type:none;
