--- a/src/components/Buttons/Buttons.module.css
+++ b/src/components/Buttons/Buttons.module.css
@@ -1,10 +1,11 @@
 .container{
-    display:flex;
-    gap:1rem;
+   
     padding-top:1.5rem;
+    margin:auto;
 }
 .btn{
     color:#FFFFFF;
     background:#007BFF;
     border-radius:1rem;
+    margin: auto 1rem;
 }
